[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts_Scenes/PhoneScenes/AppSlates/GameplayAppSlates/TextMessenger/TextMessengerEntryItemButton/TextMessengerEntryItemButton.gd" type="Script" id=1]

[node name="TextMessengerEntryItemButton" type="Button"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -558.0
margin_bottom = -420.0
rect_min_size = Vector2( 162, 60 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="BackgroundColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.345098, 0.317647, 0.419608, 1 )

[node name="InitialColorRect" type="ColorRect" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 10.0
margin_top = -20.0
margin_right = 50.0
margin_bottom = 20.0
mouse_filter = 2
color = Color( 0.235294, 0.215686, 0.286275, 1 )

[node name="InitialRichTextLabel" type="RichTextLabel" parent="InitialColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
text = "A"

[node name="MessageColorRect" type="ColorRect" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 61.0
margin_top = -19.0
margin_right = 150.0
margin_bottom = 21.0
mouse_filter = 2
color = Color( 0.235294, 0.215686, 0.286275, 1 )

[node name="MessageRichTextLabel" type="RichTextLabel" parent="MessageColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
text = "Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text"
scroll_active = false

[connection signal="pressed" from="." to="." method="_on_TextMessengerEntryItemButton_pressed"]
